--- a/.github/workflows/crawl_iqair.yml
+++ b/.github/workflows/crawl_iqair.yml
@@ -10,10 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+        - name: Checkout repository
+          uses: actions/checkout@v4
+          with:
+            token: ${{ secrets.PAT_TOKEN }}
+
     
       - name: Set up Python
         uses: actions/setup-python@v4
